--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.0315129c.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.cd94290f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ccfa8801.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.7ca2e8ae.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ff96367c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b61419b4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.bfd7d922.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.1d2c8398.js">
+		<link href="./_app/immutable/assets/2.519f88d8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.22b7a601.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.5d2c1002.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b734a802.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.797a1b1c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.2c2c3671.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.cdc22273.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -27,24 +27,13 @@
     <div class="bg-text svelte-1piiu07"></div></main>
 
 <h2 class="heading svelte-1piiu07" id="strengths">My strengths</h2>
-<div class="strengths svelte-1x9bfug"><div></div>
-    </div>
+<div class="strengths svelte-1x9bfug"></div>
 
 <h2 class="heading svelte-1piiu07" id="skills">My skills</h2>
-<div class="skills svelte-1sdls7q"><div></div>
-</div>
+<div class="skills svelte-1sdls7q"></div>
 
 <h2 class="heading svelte-1piiu07" id="projects">My projects</h2>
-<div class="projects svelte-kpidqs"><div class="row svelte-kpidqs"><div class="project svelte-kpidqs"><img src="./project-imgs/rogger-img.png" alt="rogger project preview" class="svelte-kpidqs">
-            <h3><a href="https://github.com/Hukasx0/rogger" target="_blank">Rogger</a></h3>
-            <p>Very lightweight, easy to use, secure, Rust-based Blogging Content Management System. Created with simplicity of use in mind (all operations on the blog are performed through the GUI in the admin panel), cms forces us to watch over security by generating secure, truly random passwords (no more passwords like password123), speed is obtained using the Rust language, optimization and saving Last 100 posts in ram for faster loading. The lightness of the software is due to the Rust language, the Sqlite library and the Redis database.</p>
-            <p><a href="https://github.com/Hukasx0/rogger">Project repository</a></p>
-            <p>Tech stack: Rust, Actix, SQLite, Redis, PicoCss, HTML, JavaScript, Docker, Shell/Bash</p></div>
-        <div class="project svelte-kpidqs"><img src="./project-imgs/zsp2-wagrowiec-img.png" alt="zsp2wagrowiec website project preview" class="svelte-kpidqs">
-            <h3><a href="https://hukasx0.github.io/zsp2wagrowiec-strona/" target="_blank">ZSP2 Wagrowiec website</a></h3>
-            <p>A dynamic, responsive website without a backend using the Rest API of the school website. The website took first place in the competition for a school website.</p>
-            <p><a href="https://github.com/Hukasx0/zsp2wagrowiec-strona">Project repository</a></p>
-            <p>Tech stack: HTML, CSS, Bootstrap, JavaScript, JQuery</p></div></div></div>
+<div class="projects svelte-kpidqs"><div class="row svelte-kpidqs"></div></div>
 
 <h2 class="heading svelte-1piiu07" id="contact">Contact me</h2>
 <div class="contact"></div>
@@ -56,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_1dxrg46 = {
+					__sveltekit_6b5ipr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -66,8 +55,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ccfa8801.js"),
-						import("./_app/immutable/entry/app.b61419b4.js")
+						import("./_app/immutable/entry/start.22b7a601.js"),
+						import("./_app/immutable/entry/app.797a1b1c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
