--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.42862b42.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.a0158596.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a87a7336.js">
+		<link href="./_app/immutable/assets/2.34d62d74.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.79f40187.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0caa862f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c933bf5c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0798b739.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3cff07bd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.42246f1a.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.068bd92b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.a0ea1f44.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.d5cd9585.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -27,10 +27,10 @@
     <div class="bg-text svelte-fa9ug"></div></main>
 
 <h2 class="heading svelte-fa9ug" id="strengths">My strengths</h2>
-<div class="strengths svelte-1abfpc2"></div>
+<div class="strengths svelte-ka5kn0"></div>
 
 <h2 class="heading svelte-fa9ug" id="skills">My skills</h2>
-<div class="skills svelte-fdxghe"></div>
+<div class="skills svelte-9nc60m"></div>
 
 <h2 class="heading svelte-fa9ug" id="projects">My projects</h2>
 <div class="projects svelte-1oyd42a"><div class="row svelte-1oyd42a"></div></div>
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_9snkuo = {
+					__sveltekit_1ihkhf7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -55,8 +55,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a87a7336.js"),
-						import("./_app/immutable/entry/app.0798b739.js")
+						import("./_app/immutable/entry/start.79f40187.js"),
+						import("./_app/immutable/entry/app.42246f1a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
