--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="./favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.42862b42.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.34d62d74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.79f40187.js">
+		<link href="./_app/immutable/assets/2.340b0fec.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9f8d0f31.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0caa862f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3cff07bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.42246f1a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.df4d5801.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.bd9ab8d5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.068bd92b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.d5cd9585.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.baa1f860.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -21,31 +21,29 @@
 
 
 
-<main class="svelte-fa9ug"><div class="intro svelte-fa9ug">
+<main class="svelte-1a45pqm"><div class="intro svelte-1a45pqm">
         
-        <div class="btn-container svelte-fa9ug"></div></div>
-    <div class="bg-text svelte-fa9ug"></div></main>
+        <div class="btn-container svelte-1a45pqm"></div></div>
+    <div class="bg-text svelte-1a45pqm"></div></main>
 
-<h2 class="heading svelte-fa9ug" id="strengths">My strengths</h2>
+<h2 class="heading svelte-1a45pqm" id="strengths">My strengths</h2>
 <div class="strengths svelte-ka5kn0"></div>
 
-<h2 class="heading svelte-fa9ug" id="skills">My skills</h2>
+<h2 class="heading svelte-1a45pqm" id="skills">My skills</h2>
 <div class="skills svelte-9nc60m"></div>
 
-<h2 class="heading svelte-fa9ug" id="projects">My projects</h2>
-<div class="projects svelte-1oyd42a"><div class="row svelte-1oyd42a"></div></div>
+<h2 class="heading svelte-1a45pqm" id="projects">My projects</h2>
+<div class="projects svelte-16l04is"><div class="row svelte-16l04is"></div></div>
 
-<h2 class="heading svelte-fa9ug" id="contact">Contact me</h2>
-<div class="contact"></div>
-
-<footer class="svelte-1mx47xy"><a href="https://github.com/hukasx0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" width="50" height="50"><g fill="#181616"><path fill-rule="evenodd" clip-rule="evenodd" d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z"></path><path d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0"></path></g></svg></a>
-    <p>2023 Designed and coded by Hubert Kasperek</p></footer>
+<footer class="svelte-1pyfem4"><div><a href="https://github.com/Hukasx0"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(42, 195, 222, 1);"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg></a>
+        <a href="https://www.buymeacoffee.com/Hukasx0"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(42, 195, 222, 1);"><path d="M7 22h10a1 1 0 0 0 .99-.858L19.867 8H21V6h-1.382l-1.724-3.447A.998.998 0 0 0 17 2H7c-.379 0-.725.214-.895.553L4.382 6H3v2h1.133L6.01 21.142A1 1 0 0 0 7 22zm10.418-11H6.582l-.429-3h11.693l-.428 3zm-9.551 9-.429-3h9.123l-.429 3H7.867zM7.618 4h8.764l1 2H6.618l1-2z"></path></svg></a></div>
+    <p>2023 Designed and coded by <span class="gradient-logo">Hubert Kasperek</span></p></footer>
 
 
 			
 			<script>
 				{
-					__sveltekit_1ihkhf7 = {
+					__sveltekit_y36fn5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -55,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.79f40187.js"),
-						import("./_app/immutable/entry/app.42246f1a.js")
+						import("./_app/immutable/entry/start.9f8d0f31.js"),
+						import("./_app/immutable/entry/app.bd9ab8d5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
