--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/0.42862b42.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.340b0fec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9f8d0f31.js">
+		<link href="./_app/immutable/assets/0.4b5d9c15.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.0ea36c9c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1e25fd8f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0caa862f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.df4d5801.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.bd9ab8d5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.068bd92b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.baa1f860.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.81d011d3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.7ffb69a8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.bf00193f.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.30b752c7.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -21,21 +21,21 @@
 
 
 
-<main class="svelte-1a45pqm"><div class="intro svelte-1a45pqm">
+<main class="svelte-devodk"><div class="intro svelte-devodk">
         
-        <div class="btn-container svelte-1a45pqm"></div></div>
-    <div class="bg-text svelte-1a45pqm"></div></main>
+        <div class="btn-container svelte-devodk"></div></div>
+    <div class="bg-text svelte-devodk"></div></main>
 
-<h2 class="heading svelte-1a45pqm" id="strengths">My strengths</h2>
-<div class="strengths svelte-ka5kn0"></div>
+<h2 class="heading svelte-devodk" id="strengths">My strengths</h2>
+<div class="strengths svelte-5h4ug2"></div>
 
-<h2 class="heading svelte-1a45pqm" id="skills">My skills</h2>
-<div class="skills svelte-9nc60m"></div>
+<h2 class="heading svelte-devodk" id="skills">My skills</h2>
+<div class="skills svelte-ofgbj4"></div>
 
-<h2 class="heading svelte-1a45pqm" id="projects">My projects</h2>
-<div class="projects svelte-16l04is"><div class="row svelte-16l04is"></div></div>
+<h2 class="heading svelte-devodk" id="projects">My projects</h2>
+<div class="projects svelte-1mspif3"><div class="row svelte-1mspif3"></div></div>
 
-<footer class="svelte-1pyfem4"><div><a href="https://github.com/Hukasx0"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(42, 195, 222, 1);"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg></a>
+<footer class="svelte-ultvz6"><div><a href="https://github.com/Hukasx0"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(42, 195, 222, 1);"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg></a>
         <a href="https://www.buymeacoffee.com/Hukasx0"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(42, 195, 222, 1);"><path d="M7 22h10a1 1 0 0 0 .99-.858L19.867 8H21V6h-1.382l-1.724-3.447A.998.998 0 0 0 17 2H7c-.379 0-.725.214-.895.553L4.382 6H3v2h1.133L6.01 21.142A1 1 0 0 0 7 22zm10.418-11H6.582l-.429-3h11.693l-.428 3zm-9.551 9-.429-3h9.123l-.429 3H7.867zM7.618 4h8.764l1 2H6.618l1-2z"></path></svg></a></div>
     <p>2023 Designed and coded by <span class="gradient-logo">Hubert Kasperek</span></p></footer>
 
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_y36fn5 = {
+					__sveltekit_sw2rvd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9f8d0f31.js"),
-						import("./_app/immutable/entry/app.bd9ab8d5.js")
+						import("./_app/immutable/entry/start.1e25fd8f.js"),
+						import("./_app/immutable/entry/app.7ffb69a8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
