--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.4b5d9c15.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.0ea36c9c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1e25fd8f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.0caa862f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.81d011d3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7ffb69a8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.bf00193f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.30b752c7.js">
+		<link href="./_app/immutable/assets/2.8468b0e6.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7ffb43b6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.3bfed6e0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ab9d52ae.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c10cd379.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.4d1b14e8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.f5aa03a8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_sw2rvd = {
+					__sveltekit_1jqq4k2 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1e25fd8f.js"),
-						import("./_app/immutable/entry/app.7ffb69a8.js")
+						import("./_app/immutable/entry/start.7ffb43b6.js"),
+						import("./_app/immutable/entry/app.c10cd379.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
