--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.4b5d9c15.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.8468b0e6.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7ffb43b6.js">
+		<link href="./_app/immutable/assets/2.f9b02559.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2c19f95e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3bfed6e0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ab9d52ae.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c10cd379.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.624f2304.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.9c3ef520.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.4d1b14e8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.f5aa03a8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.bbfc9085.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -27,7 +27,7 @@
     <div class="bg-text svelte-devodk"></div></main>
 
 <h2 class="heading svelte-devodk" id="strengths">My strengths</h2>
-<div class="strengths svelte-5h4ug2"></div>
+<div class="strengths svelte-1j3tc8g"></div>
 
 <h2 class="heading svelte-devodk" id="skills">My skills</h2>
 <div class="skills svelte-ofgbj4"></div>
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_1jqq4k2 = {
+					__sveltekit_n9hchf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7ffb43b6.js"),
-						import("./_app/immutable/entry/app.c10cd379.js")
+						import("./_app/immutable/entry/start.2c19f95e.js"),
+						import("./_app/immutable/entry/app.9c3ef520.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
