--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.4b5d9c15.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.f9b02559.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2c19f95e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2f0666ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3bfed6e0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.624f2304.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.9c3ef520.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c7cba2d4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.7132cf9e.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.4d1b14e8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.bbfc9085.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.11e8b382.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_n9hchf = {
+					__sveltekit_1hw768h = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +53,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2c19f95e.js"),
-						import("./_app/immutable/entry/app.9c3ef520.js")
+						import("./_app/immutable/entry/start.2f0666ad.js"),
+						import("./_app/immutable/entry/app.7132cf9e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
