--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<title>Portfolio | Hubert Kasperek</title>
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.4b5d9c15.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.f9b02559.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2f0666ad.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.3bfed6e0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c7cba2d4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7132cf9e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.4d1b14e8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.11e8b382.js">
+		<link href="./_app/immutable/assets/2.287b08c3.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.d1e9a294.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.943d470b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.79d28ceb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c6025108.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e50c5d1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ae66ae1d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -21,10 +21,6 @@
 
 
 
-<main class="svelte-devodk"><div class="intro svelte-devodk">
-        
-        <div class="btn-container svelte-devodk"></div></div>
-    <div class="bg-text svelte-devodk"></div></main>
 
 <h2 class="heading svelte-devodk" id="strengths">My strengths</h2>
 <div class="strengths svelte-1j3tc8g"></div>
@@ -43,7 +39,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hw768h = {
+					__sveltekit_gdqxxu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -53,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2f0666ad.js"),
-						import("./_app/immutable/entry/app.7132cf9e.js")
+						import("./_app/immutable/entry/start.d1e9a294.js"),
+						import("./_app/immutable/entry/app.c6025108.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
